fix the layout issues of the about page so that row has max height that doesn't stretch past nav bar

--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -47,7 +47,7 @@ body, html {
 }
 .row {
   background-color: #F9FAFF;
-  max-width: 100%;
+  max-width: 110%;
   padding-left: 45px;
   padding-right: 45px;
   display: flex;
@@ -69,7 +69,8 @@ body, html {
 }
 .column {
   max-width: 25%;
-  max-height: 100%;
+  // max-height: 100%;
+  // margin-right: 12px;
   flex: 25%;
   .fa-solid {
     font-size: 90px;
@@ -311,7 +312,7 @@ body, html {
   .column {
     flex: 100%;
     max-width: 100%;
-    max-height: 100%;
+    // max-height: 100%;
   }
 }
 
@@ -320,7 +321,7 @@ body, html {
   .column {
     flex: 100%;
     max-width: 100%;
-    max-height: 100%;
+    // max-height: 100%;
   }
 
 }
@@ -330,7 +331,7 @@ body, html {
   .column {
     flex: 50%;
     max-width: 50%;
-    max-height: 100%;
+    // max-height: 100%;
   }
 
 }
@@ -340,7 +341,7 @@ body, html {
   .column {
     flex: 25%;
     max-width: 25%;
-    max-height: 100%;
+    // max-height: 100%;
   }
 
 }
@@ -350,7 +351,7 @@ body, html {
   .column {
     flex: 25%;
     max-width: 25%;
-    max-height: 100%;
+    // max-height: 100%;
   }
 
 }
